<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rohanaceres.github.io.mycv.MainActivity4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_text_school_degree"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/label_text_school_degree" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_graduation"
                tools:text="@string/edit_text_graduation" />

            <TextView
                android:id="@+id/textViewGraducao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_mba"
                tools:text="@string/edit_text_mba" />

            <TextView
                android:id="@+id/textViewPos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_phd"
                tools:text="@string/edit_text_phd" />

            <TextView
                android:id="@+id/textViewMestrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_text_professional_experience"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/label_text_professional_experience" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_company_time"
                tools:text="@string/edit_text_company_time" />

            <TextView
                android:id="@+id/textViewTempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_job_title"
                tools:text="@string/edit_text_job_title" />

            <TextView
                android:id="@+id/textViewCargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_company_name"
                tools:text="@string/edit_text_company_name" />

            <TextView
                android:id="@+id/textViewEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_text_courses"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/label_text_courses" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_course_title"
                android:textAlignment="viewStart"
                tools:text="@string/edit_text_course_title" />

            <TextView
                android:id="@+id/textViewCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_institution"
                tools:text="@string/edit_text_institution" />

            <TextView
                android:id="@+id/textViewInstituicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_course_time"
                tools:text="@string/edit_text_course_time" />

            <TextView
                android:id="@+id/textViewInstatituicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_text_publication"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/label_text_publication" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_publication_date"
                tools:text="@string/edit_text_publication_date" />

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_publication_description"
                tools:text="@string/edit_text_publication_description" />

            <TextView
                android:id="@+id/textViewDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
